Migrate the reading/ingest.
Migrate the reading and ingest classes to the new declaration
language.

Refs #113677