@@ -4,10 +4,12 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockserver.model.HttpRequest.request;
 
 import java.net.URI;
+import java.time.Duration;
 import java.time.Instant;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -22,12 +24,22 @@ import org.mockserver.model.Parameter;
 import org.mockserver.model.Parameters;
 import org.mockserver.verify.VerificationTimes;
 
-import wres.config.generated.DataSourceConfig;
-import wres.config.generated.DataSourceConfig.Variable;
-import wres.config.generated.DateCondition;
-import wres.config.generated.NamedFeature;
-import wres.config.generated.LeftOrRightOrBaseline;
-import wres.config.generated.PairConfig;
+import wres.config.yaml.components.Dataset;
+import wres.config.yaml.components.DatasetBuilder;
+import wres.config.yaml.components.DatasetOrientation;
+import wres.config.yaml.components.EvaluationDeclaration;
+import wres.config.yaml.components.EvaluationDeclarationBuilder;
+import wres.config.yaml.components.Features;
+import wres.config.yaml.components.FeaturesBuilder;
+import wres.config.yaml.components.LeadTimeInterval;
+import wres.config.yaml.components.LeadTimeIntervalBuilder;
+import wres.config.yaml.components.Source;
+import wres.config.yaml.components.SourceBuilder;
+import wres.config.yaml.components.TimeInterval;
+import wres.config.yaml.components.TimeIntervalBuilder;
+import wres.config.yaml.components.TimePools;
+import wres.config.yaml.components.TimePoolsBuilder;
+import wres.config.yaml.components.VariableBuilder;
 import wres.datamodel.scale.TimeScaleOuter;
 import wres.datamodel.space.Feature;
 import wres.datamodel.time.Event;
@@ -37,6 +49,8 @@ import wres.io.reading.DataSource;
 import wres.io.reading.TimeSeriesTuple;
 import wres.io.reading.DataSource.DataDisposition;
 import wres.statistics.MessageFactory;
+import wres.statistics.generated.Geometry;
+import wres.statistics.generated.GeometryTuple;
 import wres.system.SystemSettings;
 
 /**
@@ -57,158 +71,159 @@ class NwisReaderTest
             "?format=json&indent=on&sites=09165000&parameterCd=00060&startDT=2018-10-01T00:00:00Z&endDT=2018-10-01T01:00:00Z";
 
     /** Response from GET. */
-    private static final String RESPONSE = "{\"name\" : \"ns1:timeSeriesResponseType\",\r\n"
-                                           + "\"declaredType\" : \"org.cuahsi.waterml.TimeSeriesResponseType\",\r\n"
-                                           + "\"scope\" : \"javax.xml.bind.JAXBElement$GlobalScope\",\r\n"
-                                           + "\"value\" : {\r\n"
-                                           + "  \"queryInfo\" : {\r\n"
-                                           + "    \"queryURL\" : \"http://nwis.waterservices.usgs.gov/nwis/iv/format=json&indent=on&sites=09165000&parameterCd=00060&startDT=2018-10-01T00:00:00Z&endDT=2018-10-01T01:00:00Z\",\r\n"
-                                           + "    \"criteria\" : {\r\n"
-                                           + "      \"locationParam\" : \"[ALL:09165000]\",\r\n"
-                                           + "      \"variableParam\" : \"[00060]\",\r\n"
-                                           + "      \"timeParam\" : {\r\n"
-                                           + "        \"beginDateTime\" : \"2018-10-01T00:00:00.000\",\r\n"
-                                           + "        \"endDateTime\" : \"2018-10-01T01:00:00.000\"\r\n"
-                                           + "      },\r\n"
-                                           + "      \"parameter\" : [ ]\r\n"
-                                           + "    },\r\n"
-                                           + "    \"note\" : [ {\r\n"
-                                           + "      \"value\" : \"[ALL:09165000]\",\r\n"
-                                           + "      \"title\" : \"filter:sites\"\r\n"
-                                           + "    }, {\r\n"
-                                           + "      \"value\" : \"[mode=RANGE, modifiedSince=null] interval={INTERVAL[2018-10-01T00:00:00.000Z/2018-10-01T01:00:00.000Z]}\",\r\n"
-                                           + "      \"title\" : \"filter:timeRange\"\r\n"
-                                           + "    }, {\r\n"
-                                           + "      \"value\" : \"methodIds=[ALL]\",\r\n"
-                                           + "      \"title\" : \"filter:methodId\"\r\n"
-                                           + "    }, {\r\n"
-                                           + "      \"value\" : \"2022-08-08T21:34:38.616Z\",\r\n"
-                                           + "      \"title\" : \"requestDT\"\r\n"
-                                           + "    }, {\r\n"
-                                           + "      \"value\" : \"e7c64270-1761-11ed-911a-4cd98f86fad9\",\r\n"
-                                           + "      \"title\" : \"requestId\"\r\n"
-                                           + "    }, {\r\n"
-                                           + "      \"value\" : \"Provisional data are subject to revision. Go to http://waterdata.usgs.gov/nwis/help/?provisional for more information.\",\r\n"
-                                           + "      \"title\" : \"disclaimer\"\r\n"
-                                           + "    }, {\r\n"
-                                           + "      \"value\" : \"nadww02\",\r\n"
-                                           + "      \"title\" : \"server\"\r\n"
-                                           + "    } ]\r\n"
-                                           + "  },\r\n"
-                                           + "  \"timeSeries\" : [ {\r\n"
-                                           + "    \"sourceInfo\" : {\r\n"
-                                           + "      \"siteName\" : \"DOLORES RIVER BELOW RICO, CO.\",\r\n"
-                                           + "      \"siteCode\" : [ {\r\n"
-                                           + "        \"value\" : \"09165000\",\r\n"
-                                           + "        \"network\" : \"NWIS\",\r\n"
-                                           + "        \"agencyCode\" : \"USGS\"\r\n"
-                                           + "      } ],\r\n"
-                                           + "      \"timeZoneInfo\" : {\r\n"
-                                           + "        \"defaultTimeZone\" : {\r\n"
-                                           + "          \"zoneOffset\" : \"-07:00\",\r\n"
-                                           + "          \"zoneAbbreviation\" : \"MST\"\r\n"
-                                           + "        },\r\n"
-                                           + "        \"daylightSavingsTimeZone\" : {\r\n"
-                                           + "          \"zoneOffset\" : \"-06:00\",\r\n"
-                                           + "          \"zoneAbbreviation\" : \"MDT\"\r\n"
-                                           + "        },\r\n"
-                                           + "        \"siteUsesDaylightSavingsTime\" : true\r\n"
-                                           + "      },\r\n"
-                                           + "      \"geoLocation\" : {\r\n"
-                                           + "        \"geogLocation\" : {\r\n"
-                                           + "          \"srs\" : \"EPSG:4326\",\r\n"
-                                           + "          \"latitude\" : 37.63888428,\r\n"
-                                           + "          \"longitude\" : -108.0603517\r\n"
-                                           + "        },\r\n"
-                                           + "        \"localSiteXY\" : [ ]\r\n"
-                                           + "      },\r\n"
-                                           + "      \"note\" : [ ],\r\n"
-                                           + "      \"siteType\" : [ ],\r\n"
-                                           + "      \"siteProperty\" : [ {\r\n"
-                                           + "        \"value\" : \"ST\",\r\n"
-                                           + "        \"name\" : \"siteTypeCd\"\r\n"
-                                           + "      }, {\r\n"
-                                           + "        \"value\" : \"14030002\",\r\n"
-                                           + "        \"name\" : \"hucCd\"\r\n"
-                                           + "      }, {\r\n"
-                                           + "        \"value\" : \"08\",\r\n"
-                                           + "        \"name\" : \"stateCd\"\r\n"
-                                           + "      }, {\r\n"
-                                           + "        \"value\" : \"08033\",\r\n"
-                                           + "        \"name\" : \"countyCd\"\r\n"
-                                           + "      } ]\r\n"
-                                           + "    },\r\n"
-                                           + "    \"variable\" : {\r\n"
-                                           + "      \"variableCode\" : [ {\r\n"
-                                           + "        \"value\" : \"00060\",\r\n"
-                                           + "        \"network\" : \"NWIS\",\r\n"
-                                           + "        \"vocabulary\" : \"NWIS:UnitValues\",\r\n"
-                                           + "        \"variableID\" : 45807197,\r\n"
-                                           + "        \"default\" : true\r\n"
-                                           + "      } ],\r\n"
-                                           + "      \"variableName\" : \"Streamflow, ft&#179;/s\",\r\n"
-                                           + "      \"variableDescription\" : \"Discharge, cubic feet per second\",\r\n"
-                                           + "      \"valueType\" : \"Derived Value\",\r\n"
-                                           + "      \"unit\" : {\r\n"
-                                           + "        \"unitCode\" : \"ft3/s\"\r\n"
-                                           + "      },\r\n"
-                                           + "      \"options\" : {\r\n"
-                                           + "        \"option\" : [ {\r\n"
-                                           + "          \"name\" : \"Statistic\",\r\n"
-                                           + "          \"optionCode\" : \"00000\"\r\n"
-                                           + "        } ]\r\n"
-                                           + "      },\r\n"
-                                           + "      \"note\" : [ ],\r\n"
-                                           + "      \"noDataValue\" : -999999.0,\r\n"
-                                           + "      \"variableProperty\" : [ ],\r\n"
-                                           + "      \"oid\" : \"45807197\"\r\n"
-                                           + "    },\r\n"
-                                           + "    \"values\" : [ {\r\n"
-                                           + "      \"value\" : [ {\r\n"
-                                           + "        \"value\" : \"11.0\",\r\n"
-                                           + "        \"qualifiers\" : [ \"A\" ],\r\n"
-                                           + "        \"dateTime\" : \"2018-09-30T18:00:00.000-06:00\"\r\n"
-                                           + "      }, {\r\n"
-                                           + "        \"value\" : \"11.0\",\r\n"
-                                           + "        \"qualifiers\" : [ \"A\" ],\r\n"
-                                           + "        \"dateTime\" : \"2018-09-30T18:15:00.000-06:00\"\r\n"
-                                           + "      }, {\r\n"
-                                           + "        \"value\" : \"11.0\",\r\n"
-                                           + "        \"qualifiers\" : [ \"A\" ],\r\n"
-                                           + "        \"dateTime\" : \"2018-09-30T18:30:00.000-06:00\"\r\n"
-                                           + "      }, {\r\n"
-                                           + "        \"value\" : \"11.0\",\r\n"
-                                           + "        \"qualifiers\" : [ \"A\" ],\r\n"
-                                           + "        \"dateTime\" : \"2018-09-30T18:45:00.000-06:00\"\r\n"
-                                           + "      }, {\r\n"
-                                           + "        \"value\" : \"11.5\",\r\n"
-                                           + "        \"qualifiers\" : [ \"A\" ],\r\n"
-                                           + "        \"dateTime\" : \"2018-09-30T19:00:00.000-06:00\"\r\n"
-                                           + "      } ],\r\n"
-                                           + "      \"qualifier\" : [ {\r\n"
-                                           + "        \"qualifierCode\" : \"A\",\r\n"
-                                           + "        \"qualifierDescription\" : \"Approved for publication -- Processing and review completed.\",\r\n"
-                                           + "        \"qualifierID\" : 0,\r\n"
-                                           + "        \"network\" : \"NWIS\",\r\n"
-                                           + "        \"vocabulary\" : \"uv_rmk_cd\"\r\n"
-                                           + "      } ],\r\n"
-                                           + "      \"qualityControlLevel\" : [ ],\r\n"
-                                           + "      \"method\" : [ {\r\n"
-                                           + "        \"methodDescription\" : \"\",\r\n"
-                                           + "        \"methodID\" : 211948\r\n"
-                                           + "      } ],\r\n"
-                                           + "      \"source\" : [ ],\r\n"
-                                           + "      \"offset\" : [ ],\r\n"
-                                           + "      \"sample\" : [ ],\r\n"
-                                           + "      \"censorCode\" : [ ]\r\n"
-                                           + "    } ],\r\n"
-                                           + "    \"name\" : \"USGS:09165000:00060:00000\"\r\n"
-                                           + "  } ]\r\n"
-                                           + "},\r\n"
-                                           + "\"nil\" : false,\r\n"
-                                           + "\"globalScope\" : true,\r\n"
-                                           + "\"typeSubstituted\" : false\r\n"
-                                           + "}";
+    private static final String RESPONSE = """
+            {"name" : "ns1:timeSeriesResponseType",\r
+            "declaredType" : "org.cuahsi.waterml.TimeSeriesResponseType",\r
+            "scope" : "javax.xml.bind.JAXBElement$GlobalScope",\r
+            "value" : {\r
+              "queryInfo" : {\r
+                "queryURL" : "http://nwis.waterservices.usgs.gov/nwis/iv/format=json&indent=on&sites=09165000&parameterCd=00060&startDT=2018-10-01T00:00:00Z&endDT=2018-10-01T01:00:00Z",\r
+                "criteria" : {\r
+                  "locationParam" : "[ALL:09165000]",\r
+                  "variableParam" : "[00060]",\r
+                  "timeParam" : {\r
+                    "beginDateTime" : "2018-10-01T00:00:00.000",\r
+                    "endDateTime" : "2018-10-01T01:00:00.000"\r
+                  },\r
+                  "parameter" : [ ]\r
+                },\r
+                "note" : [ {\r
+                  "value" : "[ALL:09165000]",\r
+                  "title" : "filter:sites"\r
+                }, {\r
+                  "value" : "[mode=RANGE, modifiedSince=null] interval={INTERVAL[2018-10-01T00:00:00.000Z/2018-10-01T01:00:00.000Z]}",\r
+                  "title" : "filter:timeRange"\r
+                }, {\r
+                  "value" : "methodIds=[ALL]",\r
+                  "title" : "filter:methodId"\r
+                }, {\r
+                  "value" : "2022-08-08T21:34:38.616Z",\r
+                  "title" : "requestDT"\r
+                }, {\r
+                  "value" : "e7c64270-1761-11ed-911a-4cd98f86fad9",\r
+                  "title" : "requestId"\r
+                }, {\r
+                  "value" : "Provisional data are subject to revision. Go to http://waterdata.usgs.gov/nwis/help/?provisional for more information.",\r
+                  "title" : "disclaimer"\r
+                }, {\r
+                  "value" : "nadww02",\r
+                  "title" : "server"\r
+                } ]\r
+              },\r
+              "timeSeries" : [ {\r
+                "sourceInfo" : {\r
+                  "siteName" : "DOLORES RIVER BELOW RICO, CO.",\r
+                  "siteCode" : [ {\r
+                    "value" : "09165000",\r
+                    "network" : "NWIS",\r
+                    "agencyCode" : "USGS"\r
+                  } ],\r
+                  "timeZoneInfo" : {\r
+                    "defaultTimeZone" : {\r
+                      "zoneOffset" : "-07:00",\r
+                      "zoneAbbreviation" : "MST"\r
+                    },\r
+                    "daylightSavingsTimeZone" : {\r
+                      "zoneOffset" : "-06:00",\r
+                      "zoneAbbreviation" : "MDT"\r
+                    },\r
+                    "siteUsesDaylightSavingsTime" : true\r
+                  },\r
+                  "geoLocation" : {\r
+                    "geogLocation" : {\r
+                      "srs" : "EPSG:4326",\r
+                      "latitude" : 37.63888428,\r
+                      "longitude" : -108.0603517\r
+                    },\r
+                    "localSiteXY" : [ ]\r
+                  },\r
+                  "note" : [ ],\r
+                  "siteType" : [ ],\r
+                  "siteProperty" : [ {\r
+                    "value" : "ST",\r
+                    "name" : "siteTypeCd"\r
+                  }, {\r
+                    "value" : "14030002",\r
+                    "name" : "hucCd"\r
+                  }, {\r
+                    "value" : "08",\r
+                    "name" : "stateCd"\r
+                  }, {\r
+                    "value" : "08033",\r
+                    "name" : "countyCd"\r
+                  } ]\r
+                },\r
+                "variable" : {\r
+                  "variableCode" : [ {\r
+                    "value" : "00060",\r
+                    "network" : "NWIS",\r
+                    "vocabulary" : "NWIS:UnitValues",\r
+                    "variableID" : 45807197,\r
+                    "default" : true\r
+                  } ],\r
+                  "variableName" : "Streamflow, ft&#179;/s",\r
+                  "variableDescription" : "Discharge, cubic feet per second",\r
+                  "valueType" : "Derived Value",\r
+                  "unit" : {\r
+                    "unitCode" : "ft3/s"\r
+                  },\r
+                  "options" : {\r
+                    "option" : [ {\r
+                      "name" : "Statistic",\r
+                      "optionCode" : "00000"\r
+                    } ]\r
+                  },\r
+                  "note" : [ ],\r
+                  "noDataValue" : -999999.0,\r
+                  "variableProperty" : [ ],\r
+                  "oid" : "45807197"\r
+                },\r
+                "values" : [ {\r
+                  "value" : [ {\r
+                    "value" : "11.0",\r
+                    "qualifiers" : [ "A" ],\r
+                    "dateTime" : "2018-09-30T18:00:00.000-06:00"\r
+                  }, {\r
+                    "value" : "11.0",\r
+                    "qualifiers" : [ "A" ],\r
+                    "dateTime" : "2018-09-30T18:15:00.000-06:00"\r
+                  }, {\r
+                    "value" : "11.0",\r
+                    "qualifiers" : [ "A" ],\r
+                    "dateTime" : "2018-09-30T18:30:00.000-06:00"\r
+                  }, {\r
+                    "value" : "11.0",\r
+                    "qualifiers" : [ "A" ],\r
+                    "dateTime" : "2018-09-30T18:45:00.000-06:00"\r
+                  }, {\r
+                    "value" : "11.5",\r
+                    "qualifiers" : [ "A" ],\r
+                    "dateTime" : "2018-09-30T19:00:00.000-06:00"\r
+                  } ],\r
+                  "qualifier" : [ {\r
+                    "qualifierCode" : "A",\r
+                    "qualifierDescription" : "Approved for publication -- Processing and review completed.",\r
+                    "qualifierID" : 0,\r
+                    "network" : "NWIS",\r
+                    "vocabulary" : "uv_rmk_cd"\r
+                  } ],\r
+                  "qualityControlLevel" : [ ],\r
+                  "method" : [ {\r
+                    "methodDescription" : "",\r
+                    "methodID" : 211948\r
+                  } ],\r
+                  "source" : [ ],\r
+                  "offset" : [ ],\r
+                  "sample" : [ ],\r
+                  "censorCode" : [ ]\r
+                } ],\r
+                "name" : "USGS:09165000:00060:00000"\r
+              } ]\r
+            },\r
+            "nil" : false,\r
+            "globalScope" : true,\r
+            "typeSubstituted" : false\r
+            }""";
 
     private static final String GET = "GET";
 
@@ -237,29 +252,20 @@ class NwisReaderTest
                                   + PATH
                                   + PARAMS );
 
-        DataSourceConfig.Source fakeDeclarationSource =
-                new DataSourceConfig.Source( fakeUri,
-                                             null,
-                                             null,
-                                             null,
-                                             null );
+        Source fakeDeclarationSource = SourceBuilder.builder()
+                                                    .uri( fakeUri )
+                                                    .build();
+
+        Dataset dataset = DatasetBuilder.builder()
+                                        .sources( List.of( fakeDeclarationSource ) )
+                                        .build();
 
         DataSource fakeSource = DataSource.of( DataDisposition.JSON_WATERML,
                                                fakeDeclarationSource,
-                                               new DataSourceConfig( null,
-                                                                     List.of( fakeDeclarationSource ),
-                                                                     null,
-                                                                     null,
-                                                                     null,
-                                                                     null,
-                                                                     null,
-                                                                     null,
-                                                                     null,
-                                                                     null,
-                                                                     null ),
+                                               dataset,
                                                Collections.emptyList(),
                                                fakeUri,
-                                               LeftOrRightOrBaseline.LEFT );
+                                               DatasetOrientation.LEFT );
 
         SystemSettings systemSettings = Mockito.mock( SystemSettings.class );
         Mockito.when( systemSettings.getMaximumWebClientThreads() )
@@ -351,48 +357,48 @@ class NwisReaderTest
                                   + PATH
                                   + PARAMS );
 
-        DataSourceConfig.Source fakeDeclarationSource =
-                new DataSourceConfig.Source( fakeUri,
-                                             null,
-                                             null,
-                                             null,
-                                             null );
+        Source fakeDeclarationSource = SourceBuilder.builder()
+                                                    .uri( fakeUri )
+                                                    .build();
+
+        Dataset dataset = DatasetBuilder.builder()
+                                        .sources( List.of( fakeDeclarationSource ) )
+                                        .variable( VariableBuilder.builder()
+                                                                  .name( "00060" )
+                                                                  .build() )
+                                        .build();
 
         DataSource fakeSource = DataSource.of( DataDisposition.JSON_WATERML,
                                                fakeDeclarationSource,
-                                               new DataSourceConfig( null,
-                                                                     List.of( fakeDeclarationSource ),
-                                                                     new Variable( "00060", null ),
-                                                                     null,
-                                                                     null,
-                                                                     null,
-                                                                     null,
-                                                                     null,
-                                                                     null,
-                                                                     null,
-                                                                     null ),
+                                               dataset,
                                                Collections.emptyList(),
                                                fakeUri,
-                                               LeftOrRightOrBaseline.LEFT );
+                                               DatasetOrientation.LEFT );
 
-        PairConfig pairConfig = new PairConfig( null,
-                                                null,
-                                                null,
-                                                List.of( new NamedFeature( "09165000", null, null ) ),
-                                                null,
-                                                null,
-                                                null,
-                                                null,
-                                                new DateCondition( "2018-01-01T00:00:00Z", "2021-01-01T00:00:00Z" ),
-                                                null,
-                                                null,
-                                                null,
-                                                null,
-                                                null,
-                                                null,
-                                                null,
-                                                null,
-                                                null );
+        LeadTimeInterval leadTimes = LeadTimeIntervalBuilder.builder()
+                                                            .minimum( Duration.ofHours( 0 ) )
+                                                            .maximum( Duration.ofHours( 18 ) )
+                                                            .build();
+        TimeInterval validDates = TimeIntervalBuilder.builder()
+                                                     .minimum( Instant.parse( "2018-01-01T00:00:00Z" ) )
+                                                     .maximum( Instant.parse( "2021-01-01T00:00:00Z" ) )
+                                                     .build();
+        TimePools referenceTimePools = TimePoolsBuilder.builder()
+                                                       .period( Duration.ofHours( 13 ) )
+                                                       .frequency( Duration.ofHours( 7 ) )
+                                                       .build();
+        Set<GeometryTuple> geometries = Set.of( GeometryTuple.newBuilder()
+                                                             .setLeft( Geometry.newBuilder().setName( "09165000" ) )
+                                                             .build() );
+        Features features = FeaturesBuilder.builder()
+                                           .geometries( geometries )
+                                           .build();
+        EvaluationDeclaration declaration = EvaluationDeclarationBuilder.builder()
+                                                                        .leadTimes( leadTimes )
+                                                                        .validDates( validDates )
+                                                                        .referenceDatePools( referenceTimePools )
+                                                                        .features( features )
+                                                                        .build();
 
         SystemSettings systemSettings = Mockito.mock( SystemSettings.class );
         Mockito.when( systemSettings.getMaximumWebClientThreads() )
@@ -400,12 +406,12 @@ class NwisReaderTest
         Mockito.when( systemSettings.poolObjectLifespan() )
                .thenReturn( 30_000 );
 
-        NwisReader reader = NwisReader.of( pairConfig, systemSettings );
+        NwisReader reader = NwisReader.of( declaration, systemSettings );
 
         try ( Stream<TimeSeriesTuple> tupleStream = reader.read( fakeSource ) )
         {
             List<TimeSeries<Double>> actual = tupleStream.map( TimeSeriesTuple::getSingleValuedTimeSeries )
-                                                         .collect( Collectors.toList() );
+                                                         .toList();
 
             // Three chunks expected
             assertEquals( 3, actual.size() );
